# mcp

./: main.py
src/s3-vectors-mcp/: README.md  pyproject.toml
src/s3-vectors-mcp-server/: .gitignore  NOTICE
src/s3-vectors-mcp-server/awslabs/s3_vectors_mcp_server/: __init__.py  consts.py  helpers.py  models.py  server.py
src/s3-vectors-mcp-server/tests/: helpers.py  test_s3_vector_bucket_operations.py  test_s3_vector_embed_operations.py  test_s3_vectors_embed_and_query_operations.py  test_s3_vectors_index_operations.py
src/s3-vectors-mcp/awslabs/: __init__.py
src/s3-vectors-mcp/awslabs/s3_vectors_mcp_server/: __init__.py  consts.py  models.py  server.py
src/s3-vectors-mcp/tests/: test_server.py
